[tool.poetry]
name = "text features from natural human language"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12,<=3.13"
pydantic = "2.10.1"
nltk = "3.9.1"
textblob = "0.18.0.post0"
scapy = "2.6.1"
transformers = "4.46.3"
numpy = "2.1.3"
pandas = "2.2.3"
ruff = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
